# mkwpp-web

./: .gitignore  .prettierignore  README.md  eslint.config.ts  index.html  openapi-config.yml  package-lock.json  package.json  svgo.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
codegen-scripts/: build-wasm.js  i18n-to-tsv.js  regen-flag-imports.js  spreadsheet-to-i18n.js  unused-i18n.js
public/: index.html  manifest.json
public/mkw/: flags
src/: index.css  index.tsx  main.tsx  setupTests.ts
src/api/: index.ts
src/api/endpoints/: blogPost.ts  countryRankings.ts  cups.ts  playerTimesheet.ts  players.ts  rankings.ts  regions.ts  scores.ts  siteChamps.ts  standardLevels.ts  submissions.ts  user.ts
src/components/: App.css  App.scss  App.tsx  AppRouter.tsx
src/components/global/: Deferred.css  Deferred.tsx  Header.css  Header.scss  Header.tsx  Navbar.css  Navbar.tsx  index.ts
src/components/pages/: BlogPostPage.tsx  ContributionsPage.tsx  CountryRankingsPage.tsx  HomePage.tsx  MatchupPage.tsx  OptionsPage.tsx  Pages.tsx  PastChampsPage.tsx  PlayerListPage.tsx  PlayerProfilePage.tsx  RankingsPage.tsx  (+9 more)
src/hooks/: ApiHook.ts  ScrollHook.ts  index.ts
src/rust_api/: index.ts
src/utils/: ArrayUtils.ts  Auth.ts  DateUtils.ts  Defaults.ts  EnumMappings.ts  EnumUtils.ts  Formatters.ts  MatchupDataCrunch.ts  Metadata.ts  Numbers.ts  SearchParams.ts  Settings.ts  User.ts
wasm/rust/mkw_lib/: Cargo.toml
wasm/rust/mkw_lib/pkg/: mkw_lib.d.ts  mkw_lib.js  mkw_lib_bg.wasm  mkw_lib_bg.wasm.d.ts  package.json
wasm/rust/mkw_lib/src/: lib.rs
(+105 files in other folders)
